--- a/common.gradle
+++ b/common.gradle
@@ -3,6 +3,7 @@
 //
 
 apply plugin: 'java'
+apply plugin: 'application'
 
 sourceCompatibility = '1.8'
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
@@ -15,6 +16,6 @@ repositories {
 }
 
 dependencies {
-    // Adding dependencies here will add the dependencies to each subproject.
+    compile group: 'commons-cli', name: 'commons-cli', version: '1.2'
     testCompile group: 'junit', name: 'junit', version: '4.10'
 }
