--- a/TwitterCollect/build.gradle
+++ b/TwitterCollect/build.gradle
@@ -1,15 +1,15 @@
-mainClassName = 'com.lagunex.twitter.Main'
-
 dependencies {
     compile group: 'org.twitter4j', name: 'twitter4j-core', version: '4.0.2'
 }
 
 run.doFirst {
-    if (hasProperty('mainClass')) {
-        mainClassName = mainClass
-    }
+    mainClassName = 'com.lagunex.twitter.Main'
+    applicationDefaultJvmArgs = ["-Dtwitter4j.enableApplicationOnlyAuth=true",
+        "-Dtwitter4j.http.useSSL=true"
+    ]
+    jvmArgs(applicationDefaultJvmArgs)
     
-    if (project.hasProperty('myargs')) {
-        args(myargs.split(' '))
-    }
+    if (project.hasProperty('mainClass')) mainClassName = project.mainClass
+    if (project.hasProperty('xArgs')) args(project.xArgs.split(' '))
+    if (project.hasProperty('xJvmArgs')) jvmArgs(project.xJvmArgs.split(' '))
 }
