--- a/IdolSentimentAnalysis/build.gradle
+++ b/IdolSentimentAnalysis/build.gradle
@@ -14,11 +14,6 @@ if (!hasProperty('mainClass')) {
 }
 
 dependencies {
-    // TODO: Add dependencies here
-    //   but note that JUnit should have already been added in parent.gradle.
-    //   By default, only the Maven Central Repository is specified in
-    //   parent.gradle.
-    //
-    // You can read more about how to add dependency here:
-    //   http://www.gradle.org/docs/current/userguide/dependency_management.html#sec:how_to_declare_your_dependencies
+    compile 'org.springframework:spring-web:4.1.4.RELEASE'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.5.0'
 }
