add VerticaConnection to root project

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,4 @@
-include 'TwitterCollect', 'IdolSentimentAnalysis', 'DataVisualization'
+include 'TwitterCollect',\
+        'IdolSentimentAnalysis',\
+        'DataVisualization',
+        'VerticaConnection'
