--- a/TwitterCollect/build.gradle
+++ b/TwitterCollect/build.gradle
@@ -1,16 +1,9 @@
 mainClassName = 'com.lagunex.twitter.Main'
+applicationDefaultJvmArgs = [
+    "-Dtwitter4j.enableApplicationOnlyAuth=true",
+    "-Dtwitter4j.http.useSSL=true"
+]
 
 dependencies {
     compile group: 'org.twitter4j', name: 'twitter4j-core', version: '4.0.2'
-}
-
-run.doFirst {
-    applicationDefaultJvmArgs = ["-Dtwitter4j.enableApplicationOnlyAuth=true",
-        "-Dtwitter4j.http.useSSL=true"
-    ]
-    jvmArgs(applicationDefaultJvmArgs)
-    
-    if (project.hasProperty('mainClass')) mainClassName = project.mainClass
-    if (project.hasProperty('xArgs')) args(project.xArgs.split(' '))
-    if (project.hasProperty('xJvmArgs')) jvmArgs(project.xJvmArgs.split(' '))
 }
