--- a/VerticaConnection/build.gradle
+++ b/VerticaConnection/build.gradle
@@ -19,7 +19,7 @@ repositories {
    }
 }
 
-
 dependencies {
     compile name: 'vertica-jdbc-7.1.1-0'
+    compile 'org.springframework:spring-jdbc:4.1.4.RELEASE'
 }
