--- a/VerticaConnection/build.gradle
+++ b/VerticaConnection/build.gradle
@@ -1,18 +1,3 @@
-// Note: "common.gradle" in the root project contains additional initialization
-//   for this project. This initialization is applied in the "build.gradle"
-//   of the root project.
-
-// NetBeans will automatically add "run" and "debug" tasks relying on the
-// "mainClass" property. You may however define the property prior executing
-// tasks by passing a "-PmainClass=<QUALIFIED_CLASS_NAME>" argument.
-//
-// Note however, that you may define your own "run" and "debug" task if you
-// prefer. In this case NetBeans will not add these tasks but you may rely on
-// your own implementation.
-if (!hasProperty('mainClass')) {
-    ext.mainClass = ''
-}
-
 repositories {
    flatDir {
        dirs 'libs'
@@ -22,4 +7,13 @@ repositories {
 dependencies {
     compile name: 'vertica-jdbc-7.1.1-0'
     compile 'org.springframework:spring-jdbc:4.1.4.RELEASE'
+}
+
+applicationDistribution.from(projectDir) {
+  include "scripts/*"
+}
+
+mainClassName = ''
+task installApp.doLast {
+    delete destinationDir.getAbsolutePath()+"/bin"
 }
