--- a/TwitterCollect/src/test/resources/twitter4j.properties.template
+++ b/TwitterCollect/src/test/resources/twitter4j.properties.template
@@ -1,11 +1,10 @@
-# To change this license header, choose License Headers in Project Properties.
-# To change this template file, choose Tools | Templates
-# and open the template in the editor.
-debug=true
-loggerFactory=twitter4j.StdOutLoggerFactory
-
 oauth.consumerKey=CONSUMER_KEY
 oauth.consumerSecret=CONSUMER_SECRET
 
+# This properties are also mandatory to connect with Twitter
 enableApplicationOnlyAuth=true
 http.useSSL=true
+
+# Only used during tests
+debug=true
+loggerFactory=twitter4j.StdOutLoggerFactory
