change query method from sentiments to topics

--- a/DataVisualization/src/main/resources/com/lagunex/app/main.properties
+++ b/DataVisualization/src/main/resources/com/lagunex/app/main.properties
@@ -11,8 +11,8 @@ dateEnd.time=Time (UTC)
 chart.update=Update charts
 chart.aggregate.pie=Aggregate summary
 chart.aggregate.histogram=Average score by time
-chart.sentiment.pie=Most Common Sentiments (MCS)
-chart.sentiment.histogram=Tweets by time per MCS
+chart.topic.pie=Most Common Topics (MCT)
+chart.topic.histogram=Tweets by time per MCT
 
 status.time=Duration of last query (in milliseconds): 
 status.loading=Loading...
