add StringUtils to handle "|" separators and preserve the original tweet message

--- a/TwitterCollect/build.gradle
+++ b/TwitterCollect/build.gradle
@@ -6,4 +6,5 @@ applicationDefaultJvmArgs = [
 
 dependencies {
     compile group: 'org.twitter4j', name: 'twitter4j-core', version: '4.0.2'
+    compile project(":common")
 }
