--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,5 @@
-include 'TwitterCollect',
+include 'common',
+        'TwitterCollect',
         'IdolSentimentAnalysis',
         'DataVisualization',
         'VerticaConnection'
